--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=mysql://n2rvrqo0qifg6ufp:s7lo4ik9ix3ldxg9@nivk0hz7m5elq4ql.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/dvgq6klnxjpgmbk8
+spring.datasource.username=n2rvrqo0qifg6ufp
+spring.datasource.password=s7lo4ik9ix3ldxg9
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.max-active=10
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
